# INarrator

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  test.py  usage.py
inarrator/: exceptions.py
inarrator/email/: __init__.py  email.py  message.py  user.py
inarrator/summarizer/: base.py  gpt.py  huggingface.py  prompt.py
inarrator/utils/: __init__.py  util.py
narrator/email/: __init__.py  email.py  message.py  user.py
narrator/summarizer/: base.py
