[tool.poetry]
name = "inarrator"
version = "0.0.1"
description = "Summarize and Narrate your emails through power of LLMs."
authors = ["keenborder786 <21110290@lums.edu.pk>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.0.265"
google-api-python-client = "^2.97.0"
html2text = "^2020.1.16"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
msal = "^1.24.0"



[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ruff = "^0.0.284"
mypy = "^1.5.0"
codespell = "^2.2.5"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
ignore = ["D203","D213","D205"]

line-length = 100

[tool.black]

line-length = 100

[tool.mypy]

ignore_missing_imports = true
no_site_packages = true
disallow_untyped_defs = "True"

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.pdf,*.yaml,*.ipynb,poetry.lock,*.min.js,*.css,package-lock.json,example_data,_dist,examples'
# Ignore latin etc
ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
# whats is a typo but used frequently in queries so kept as is
# aapply - async apply
# unsecure - typo but part of API, decided to not bother for now
ignore-words-list = 'momento,collison,ned,foor,reworkd,parth,whats,aapply,mysogyny,unsecure,damon,fro'